tests/ui/associated-types/issue-23595-1.stderr
error[E0191]: the value of the associated types `Value`, `ChildKey` and `Children` in `Hierarchy` must be specified
  --> $DIR/issue-23595-1.rs:8:60
   |
LL |     type Value;
   |     ---------- `Value` defined here
LL |     type ChildKey;
   |     ------------- `ChildKey` defined here
LL |     type Children = dyn Index<Self::ChildKey, Output = dyn Hierarchy>;
   |     ------------- `Children` defined here                  ^^^^^^^^^ help: specify the associated types: `Hierarchy<Value = Type, ChildKey = Type, Children = Type>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0191`.
